fix(styles): larger fonts on small devices, various responsive fixes

--- a/projects/website/src/app/features/consulting/consulting.component.scss
+++ b/projects/website/src/app/features/consulting/consulting.component.scss
@@ -12,6 +12,16 @@
     display: flex;
     margin: 0 0 40px 0;
 
+    &:first-of-type {
+      .description {
+        justify-content: center;
+
+        &:first-of-type > * {
+          padding-right: 80px;
+        }
+      }
+    }
+
     &:last-of-type {
       margin: 0 0 0 0;
     }
@@ -20,7 +30,6 @@
       flex: 1 1 0;
       display: flex;
       flex-direction: column;
-      justify-content: center;
     }
     img {
       width: 100%;
@@ -44,6 +53,12 @@
 
     &:first-of-type {
       flex-direction: column-reverse;
+
+      .description {
+        &:first-of-type > * {
+          padding-right: 0;
+        }
+      }
     }
 
     ul {
