--- a/projects/website/src/styles-reset.scss
+++ b/projects/website/src/styles-reset.scss
@@ -38,8 +38,15 @@ pre {
   margin: 0 0 20px 0;
 }
 
-p {
-  line-height: 2em;
+h2 {
+  font-size: 28px;
+}
+h3 {
+  font-size: 24px;
+}
+p, ul, ol {
+  font-size: 18px;
+  line-height: 30px;
 }
 
 a {
@@ -75,6 +82,7 @@ blockquote {
 }
 
 .responsive {
+
   blockquote {
     &.large {
       font-size: 1.6em;
